#278 - Add folder display combo list.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -529,6 +529,10 @@ folder_repository.preview_folder.title=Preview Folder
 folder_repository.warn_on_close.text=These folders are not synchronized yet\:\n\n\n\n{0}\n\n\nContinue Exit?
 folder_repository.warn_on_close.title=Continue Exit?
 
+folders_tab.all_folders=All folders
+folders_tab.only_local_folders=Only local folders
+folders_tab.only_online_folders=Only online folders
+
 free_limit_dialog.buy_pro=Buy PowerFolder Pro
 free_limit_dialog.buy_recommendation=It is required that you upgrade to the Pro Version or reduce your usage.
 free_limit_dialog.buy_recommendation2=PowerFolder is currently disabled until you take action.
