--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -19,6 +19,7 @@
 # http://www.powerfolder.com
 #
 
+wizard.login_online_storage.remind_password=Remind password
 wizard.login_online_storage.connecting=Connecting...
 dialog.update_check.downloadAndUpdateSilent=Download and silently update now
 general.reject=Reject
