--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -299,6 +299,7 @@ exp_folder_view.transfer_mode=Transfer mode: {0}
 exp_folder_view.total_kilobytes={0}KB(s) total
 exp_folder_view.total_megabytes={0}MB(s) total
 exp_folder_view.total_gigabytes={0}GB(s) total
+exp_folder_view.files_available={0} file(s) available
 
 file_filter_panel.deleted_and_previous_files=Deleted and recycled files
 file_filter_panel.filter_by_filename.hint=Filter by filename
