#278 - tooltips on folder icon

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -289,8 +289,8 @@ enable_silent_mode.name=Run Silently
 
 estimation.unknown=unknown
 
-exp_folder_view.expand=Expand
-exp_folder_view.collapse=Collapse
+exp_folder_view.expand=Expand details
+exp_folder_view.collapse=Collapse details
 exp_folder_view.synchronize_folder=Synchronize folder
 exp_folder_view.synchronized={0}% synchronized
 exp_folder_view.files=Files: {0}
@@ -300,6 +300,10 @@ exp_folder_view.total_kilobytes={0}KB(s) total
 exp_folder_view.total_megabytes={0}MB(s) total
 exp_folder_view.total_gigabytes={0}GB(s) total
 exp_folder_view.files_available={0} file(s) available
+exp_folder_view.folder_preview_text=Preview folder
+exp_folder_view.folder_local_text=Local folder
+exp_folder_view.folder_online_text=Online folder
+exp_folder_view.folder_local_online_text=Local and Online folder
 
 file_filter_panel.deleted_and_previous_files=Deleted and recycled files
 file_filter_panel.filter_by_filename.hint=Filter by filename
