#278 - tooltips on folder type select

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -535,6 +535,7 @@ folder_repository.preview_folder.title=Preview Folder
 folder_repository.warn_on_close.text=These folders are not synchronized yet\:\n\n\n\n{0}\n\n\nContinue Exit?
 folder_repository.warn_on_close.title=Continue Exit?
 
+folders_tab.folder_type_list.text=Select folder types to display
 folders_tab.all_folders=All folders
 folders_tab.only_local_folders=Only local folders
 folders_tab.only_online_folders=Only online folders
