#278 - update with new icons.

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -1,6 +1,6 @@
 # this file contains the images used in buttons
 
-action_new_folder.icon=icons/Directory_new.gif
+action_new_folder.icon=icons/Plus.png
 action_search_computer.icon=icons/Search_computer.gif
 action_open_preferences.icon=icons/Preferences.png
 action_open_about_box.icon=icons/information.png
