#278 - rework find friend as find computer

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -1,9 +1,10 @@
 # this file contains the images used in buttons
 
 action_new_folder.icon=icons/Plus.png
-action_search_computer.icon=icons/Search_computer.gif
+action_find_computers.icon=icons/FindComputers.gif
 action_open_preferences.icon=icons/Preferences.png
 action_open_about_box.icon=icons/information.png
+action_connect.icon=icons/ConnectBright.png
 
 #customer_small.icon=icons/Autofusion_small.png
 #customer_big.icon=icons/Autofusion_big.png
