--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -19,21 +19,20 @@
 # http://www.powerfolder.com
 #
 
-wizard.login_online_storage.remind_password=Remind password
-wizard.login_online_storage.connecting=Connecting...
-dialog.update_check.downloadAndUpdateSilent=Download and silently update now
-general.reject=Reject
-online_storage_change_account.name=Change
-online_storage_change_account.key=C
-online_storage_change_account.description=Changes the user that is currently logged into the Online Storage
-online_storage.connecting=Connecting to server
+###########
+# Actions #
+###########
 
-action_connect.description=Manually connects to a PowerFolder user
-action_connect.key=c
+action_add_friend.description=Adds computer to friend list
+action_add_friend.key=F
+action_add_friend.name=Add To Friends
+
+action_connect.description=Manually connects to a PowerFolder computer
+action_connect.key=C
 action_connect.name=Connect
 
 action_open_about_box.description=Shows information about PowerFolder
-action_open_about_box.key=a
+action_open_about_box.key=A
 action_open_about_box.name=About
 
 action_open_preferences.key=P
@@ -44,9 +43,30 @@ action_new_folder.description=Create a new folder
 action_new_folder.key=N
 action_new_folder.name=New Folder
 
-action_search_computer.description=Search for other computers
+action_find_computers.description=Search for other computers
+action_find_computers.key=F
+action_find_computers.name=Find Computers
+
+action_hide_offline.description=Offline computers will be filtered from this search result
+action_hide_offline.key=H
+action_hide_offline.name=Hide offline computers
+
+action_search_computer.description=Search for a computer
 action_search_computer.key=S
-action_search_computer.name=Search Computer
+action_search_computer.name=Search
+
+###################
+# Everything Else #
+###################
+
+wizard.login_online_storage.remind_password=Remind password
+wizard.login_online_storage.connecting=Connecting...
+dialog.update_check.downloadAndUpdateSilent=Download and silently update now
+general.reject=Reject
+online_storage_change_account.name=Change
+online_storage_change_account.key=C
+online_storage_change_account.description=Changes the user that is currently logged into the Online Storage
+online_storage.connecting=Connecting to server
 
 abort_copy.description=Abort the copy process
 abort_copy.key=A
@@ -89,10 +109,6 @@ about.dialog_contributers_tab=team
 about_web_service.description=Opens the Online Storage in default browser
 about_web_service.key=A
 about_web_service.name=About Online Storage
-
-add_friend.description=Adds user to friend list
-add_friend.key=f
-add_friend.name=Add To Friends
 
 add_modifier_friend.description=Adds the modifier of file to friend list
 add_modifier_friend.key=f
@@ -382,14 +398,10 @@ files_tab.recycled=Recycled\: {0}
 
 files_tab.recursive_selection.tooltip=Flatten view of folder directory structure
 
-find_users_dialog.title=Find users
+find_computers_dialog.title=Find computers
 
-find_users_panel.search_for_user.hint=Search for a user
-find_users_panel.search_for_user.tooltip=Enter three or more characters to search for a user
-find_users_panel.search_action.description=Search for a user
-find_users_panel.search_action.key=S
-find_users_panel.search_action.name=Search
-find_users_panel.user_name=User name
+find_computers_panel.search_for_computer.hint=Search for a computer  
+find_computers_panel.search_for_computer.tooltip=Enter three or more characters to search for a computer
 
 find_friends.description=Start searching for new friends
 find_friends.key=F
@@ -646,10 +658,6 @@ general.close.key=C
 hide_preview.description=Preview folders will be removed from lists of folders
 hide_preview.key=H
 hide_preview.name=Hide Preview Folders
-
-hide_offline.description=Offline users will be filtered from this search result
-hide_offline.key=H
-hide_offline.name=Hide offline users
 
 home_tab.in_sync=All folders are synchronized.
 home_tab.synchronizing=Synchroniation in progress...
