#278 - fix initial location of directory chooser, and some text

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -156,8 +156,8 @@ clear_completed_downloads.description=Clears the list of the recently completed 
 clear_completed_downloads.key=c
 clear_completed_downloads.name=Cleanup
 
-connect.dialog.text=Please enter the hostname or ip of the user you want to connect.\n\nPowerFolder automatically connects to the network after a short time,\nuse this option if you want to manually connect to a user.\n
-connect.dialog.title=Manually connect to a PowerFolder user
+connect.dialog.text=Please enter the hostname or ip of the computer you want to connect.\n\nPowerFolder automatically connects to the network after a short time;\nuse this option if you want to manually connect to a computer.\n
+connect.dialog.title=Manually connect to a PowerFolder computer
 
 console.update_check.new_development_version=------------ New development version downloaded ------------
 
@@ -570,7 +570,7 @@ friends_panel.show_all_friends_and_connected_lan=Show all friends and online LAN
 friends_panel.show_online_friends_and_connected_lan=Show online friends and LAN computers
 friends_panel.show_online_friends_only=Show online friends only
 
-friend_search.no_user_found=No users found
+friend_search.no_computers_found=No computers found
 friend_search.node_table.ip=IP
 friend_search.node_table.last_seen_online=Last seen online
 friend_search.node_table.name=Name
