--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -5,6 +5,7 @@ action_find_computers.icon=icons/FindComputers.gif
 action_open_preferences.icon=icons/Preferences.png
 action_open_about_box.icon=icons/information.png
 action_connect.icon=icons/ConnectBright.png
+action_add_friend.icon=icons/Plus.png
 
 #customer_small.icon=icons/Autofusion_small.png
 #customer_big.icon=icons/Autofusion_big.png
