#278 - add computer type combo

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -156,6 +156,11 @@ clear_completed_downloads.description=Clears the list of the recently completed 
 clear_completed_downloads.key=c
 clear_completed_downloads.name=Cleanup
 
+computers_tab.computer_type_list.text=Select computer types to display
+computers_tab.all_computers=All computers
+computers_tab.only_online_friends=Friends only
+computers_tab.all_online=All online computers
+
 connect.dialog.text=Please enter the hostname or ip of the computer you want to connect.\n\nPowerFolder automatically connects to the network after a short time;\nuse this option if you want to manually connect to a computer.\n
 connect.dialog.title=Manually connect to a PowerFolder computer
 
