#278 - fix up computer icons

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -310,8 +310,15 @@ enable_silent_mode.name=Run Silently
 
 estimation.unknown=unknown
 
-exp_folder_view.expand=Expand details
-exp_folder_view.collapse=Collapse details
+exp_computer_view.expand=Expand computer details
+exp_computer_view.collapse=Collapse computer details
+exp_computer_view.node_friend_connected_text=Connected friend computer
+exp_computer_view.node_non_friend_connected_text=Connected non-friend computer
+exp_computer_view.node_friend_disconnected_text=Disconnected friend computer
+exp_computer_view.node_non_friend_disconnected_text=Disconnected non-friend computer
+
+exp_folder_view.expand=Expand folder details
+exp_folder_view.collapse=Collapse folder details
 exp_folder_view.synchronize_folder=Synchronize folder
 exp_folder_view.synchronized={0}% synchronized
 exp_folder_view.files=Files: {0}
