#278 - add sync button to folders view

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -55,6 +55,10 @@ action_search_computer.description=Search for a computer
 action_search_computer.key=S
 action_search_computer.name=Search
 
+action_open_settings_information.description=Open settings information for this folder
+action_open_settings_information.key=S
+action_open_settings_information.name=Settings
+
 ###################
 # Everything Else #
 ###################
