--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -6,6 +6,7 @@ action_open_preferences.icon=icons/Preferences.png
 action_open_about_box.icon=icons/information.png
 action_connect.icon=icons/ConnectBright.png
 action_add_friend.icon=icons/Plus.png
+action_open_settings_information.icon=icons/Settings.png
 
 #customer_small.icon=icons/Autofusion_small.png
 #customer_big.icon=icons/Autofusion_big.png
