#278 - add folders and computers buttons to folders view

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -7,6 +7,8 @@ action_open_about_box.icon=icons/information.png
 action_connect.icon=icons/ConnectBright.png
 action_add_friend.icon=icons/Plus.png
 action_open_settings_information.icon=icons/Settings.png
+action_open_files_information.icon=icons/Folders.png
+action_open_computers_information.icon=icons/Computer.png
 
 #customer_small.icon=icons/Autofusion_small.png
 #customer_big.icon=icons/Autofusion_big.png
