--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -59,6 +59,14 @@ action_open_settings_information.description=Open settings information for this 
 action_open_settings_information.key=S
 action_open_settings_information.name=Settings
 
+action_open_files_information.description=Open files information for this folder
+action_open_files_information.key=S
+action_open_files_information.name=Files
+
+action_open_computers_information.description=Open computers information for this folder
+action_open_computers_information.key=C
+action_open_computers_information.name=Computers
+
 ###################
 # Everything Else #
 ###################
