--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -63,9 +63,9 @@ action_open_files_information.description=Open files information for this folder
 action_open_files_information.key=S
 action_open_files_information.name=Files
 
-action_open_computers_information.description=Open computers information for this folder
-action_open_computers_information.key=C
-action_open_computers_information.name=Computers
+action_open_members_information.description=Open members information for this folder
+action_open_members_information.key=M
+action_open_members_information.name=Members
 
 ###################
 # Everything Else #
@@ -708,6 +708,10 @@ image_file_info.resolution=Resolution
 image_file_info.unknown=Unknown
 
 info_side.title=Information
+
+information.files.title={0} files
+information.computers.title={0} computers
+information.settings.title={0} settings
 
 invitation.utils.unable.write.text=Error while writing invitation, please try again.
 invitation.utils.unable.write.title=Unable to write invitation
