#278 - fix a few typos

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -710,7 +710,7 @@ image_file_info.unknown=Unknown
 info_side.title=Information
 
 information.files.title={0} files
-information.computers.title={0} computers
+information.members.title={0} members
 information.settings.title={0} settings
 
 invitation.utils.unable.write.text=Error while writing invitation, please try again.
