#278 - display member last seen date.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -328,6 +328,7 @@ exp_computer_view.node_friend_connected_text=Connected friend computer
 exp_computer_view.node_non_friend_connected_text=Connected non-friend computer
 exp_computer_view.node_friend_disconnected_text=Disconnected friend computer
 exp_computer_view.node_non_friend_disconnected_text=Disconnected non-friend computer
+exp_computer_view.last_seen_text=Last seen online: {0}
 
 exp_folder_view.expand=Expand folder details
 exp_folder_view.collapse=Collapse folder details
