#278 - initial system monitor

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -92,8 +92,16 @@ abort_transfer.description=Aborts the selected transfer
 abort_transfer.key=a
 abort_transfer.name=Abort Transfer(s)
 
-about.dialog.check_for_updates=Check For Updates
-about.dialog.check_for_updates.key=U
+about_dialog.check_for_updates.text=Check
+about_dialog.check_for_updates.tips=Check for PowerFolder updates
+about_dialog.check_for_updates.key=C
+about_dialog.send_bug_report.text=Report
+about_dialog.send_bug_report.tips=Send a bug report to PowerFolder
+about_dialog.send_bug_report.key=R
+about_dialog.system_monitor.text=Monitor
+about_dialog.system_monitor.tips=Display a system monitor panel
+about_dialog.system_monitor.key=M
+
 about.dialog.contributers=Contributers
 about.dialog.documentation=Documentation
 about.dialog.general_information=General Information
@@ -103,8 +111,6 @@ about.dialog.power_folder.build_time=Build time\: {0}
 about.dialog.power_folder.max=Max memory\: {0}MB
 about.dialog.power_folder.text=Version\: {0}
 about.dialog.power_folder.used=Used memory\: {0}MB
-about.dialog.send_bug_report=Send Bug Report
-about.dialog.send_bug_report.key=B
 about.dialog.support=Support
 about.dialog.sync_your_world=Sync your World
 about.dialog.team=Team
