--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1283,6 +1283,11 @@ synchronisation.warning.automatic_deletions_notice=This mode will also synchroni
 synchronisation.warning.explanation=You have selected transfer mode '{0}' for folder {1}.
 synchronisation.warning.title=Activate transfer mode {0} for {1}
 
+system_monitor.title=System Monitor
+system_monitor.cpu_usage=CPU Usage:
+system_monitor.threads=Threads:
+system_monitor.heap_usage=Heap Usage:
+
 transfer_mode.auto_download_friends.name=Auto-download friends
 transfer_mode.automatic_download.name=Automatic download
 transfer_mode.automatic_synchronization.name=Automatic synchronization
