#278 - standard about translation keys

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -101,28 +101,24 @@ about_dialog.send_bug_report.key=R
 about_dialog.system_monitor.text=Monitor
 about_dialog.system_monitor.tips=Display a system monitor panel
 about_dialog.system_monitor.key=M
-
-about.dialog.contributers=Contributers
-about.dialog.documentation=Documentation
-about.dialog.general_information=General Information
-about.dialog.home_page=Homepage
-about.dialog.power_folder.build_date=Build date\: {0}
-about.dialog.power_folder.build_time=Build time\: {0}
-about.dialog.power_folder.max=Max memory\: {0}MB
-about.dialog.power_folder.text=Version\: {0}
-about.dialog.power_folder.used=Used memory\: {0}MB
-about.dialog.support=Support
-about.dialog.sync_your_world=Sync your World
-about.dialog.team=Team
-about.dialog.testers=Testers
-about.dialog.title=About PowerFolder
-about.dialog.translators=Translators
-about.dialog.your_system.java_version=Java version\: {0}
-about.dialog.your_system.os=OS\: {0}
-about.dialog.your_system.screen=Screen\: {0}x{1}
-about.dialog.your_system.title=Your System
-about.dialog_about_tab=about
-about.dialog_contributers_tab=team
+about_dialog.contributers=Contributers
+about_dialog.documentation=Documentation
+about_dialog.general_information=General Information
+about_dialog.home_page=Homepage
+about_dialog.power_folder.build_date=Build date\: {0}
+about_dialog.power_folder.build_time=Build time\: {0}
+about_dialog.power_folder.max=Max memory\: {0}MB
+about_dialog.power_folder.text=Version\: {0}
+about_dialog.power_folder.used=Used memory\: {0}MB
+about_dialog.support=Support
+about_dialog.sync_your_world=Sync your World
+about_dialog.team=Team
+about_dialog.title=About PowerFolder
+about_dialog.translators=Translators
+about_dialog.your_system.java_version=Java version\: {0}
+about_dialog.your_system.os=OS\: {0}
+about_dialog.your_system.screen=Screen\: {0}x{1}
+about_dialog.your_system.title=Your System
 
 about_web_service.description=Opens the Online Storage in default browser
 about_web_service.key=A
