#278 - add reconnect button to members

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -9,182 +9,5 @@ action_add_friend.icon=icons/Plus.png
 action_open_settings_information.icon=icons/Settings.png
 action_open_files_information.icon=icons/Folders.png
 action_open_members_information.icon=icons/Node_Friend_Connected.gif
+action_reconnect.icon=icons/ConnectBright.png
 
-#customer_small.icon=icons/Autofusion_small.png
-#customer_big.icon=icons/Autofusion_big.png
-
-#small_logo.icon=icons/PowerFolder_32x32.gif
-#start_downloads.icon=icons/Play.gif
-#abort_download.icon=icons/Abort.gif
-#clear_completed_downloads.icon=icons/Clear.gif
-#clear_completed_uploads.icon=icons/Clear.gif
-#clearrecentdownloads.icon=icons/Clear.gif
-#connect.icon=icons/Connect.gif
-#disable_silent_mode.icon=icons/ScansDisabled.gif
-#enable_silent_mode.icon=icons/SyncMode.gif
-#scan_folder.icon=icons/FileList.gif
-#folder_create.icon=icons/FolderCreate.gif
-#preferences.icon=icons/Settings.gif
-#preferences.dialog.icon=icons/Settings.gif
-#about.icon=icons/PowerFolder.gif
-#about.dialog.icon=icons/PowerFolder.gif
-#request_file_list.icon=icons/FileList.gif
-#add_friend.icon=icons/Node.gif
-#add_modifier_friend.icon=icons/Node.gif
-#remove_friend.icon=icons/Node_orange.gif
-#remove_modifier_friend.icon=icons/Node_orange.gif
-#set_master_node.icon=icons/Node.gif
-#show_file_info.icon=icons/SendMessage.gif
-#abort_transfer.icon=icons/Abort.gif
-#folders.icon=icons/Folders.gif
-#folder_invalid.icon=icons/Folder_invalid.gif
-#open_chat.icon=icons/Chat.gif
-#send_invitation.icon=icons/Chat.gif
-#reconnect.icon=icons/Connect.gif
-#open_file.icon=icons/Play.gif
-#addpattern.icon=icons/Pattern.gif
-#settings.icon=icons/Settings.gif
-#dialog.icon=icons/Dialog.gif
-#download_file.icon=icons/Download.gif
-#delete_file.icon=icons/Delete.gif
-#open_local_folder.icon=icons/Directory.gif
-#webservice_request_folder_join.icon=icons/PowerFolder.gif
-#webservice_request_folder_leave.icon=icons/PowerFolder.gif
-#remove_from_recycle_bin.icon=icons/Delete.gif
-#black_list.icon=icons/BlackList.gif
-#white_list.icon=icons/WhiteList.gif
-#un_black_list.icon=icons/UnList.gif
-#un_white_list.icon=icons/UnList.gif
-#abort_copy.icon=icons/Forbid.gif
-#show_hide_file_details.icon=icons/Properties.gif
-#question.icon=icons/Question.gif
-
-# Toolbar icons
-#wizard.icon=icons/toolbar/NewFolder-48.png
-#search_user.icon=icons/toolbar/SearchUser-48.png
-#buy_pro.icon=icons/toolbar/BuyNow.png
-#new_folder.icon=icons/toolbar/NewFolder-48.png
-#join_folder.icon=icons/toolbar/JoinFolder-48.png
-#remove_folder.icon=icons/toolbar/LeaveFolder-48.png
-#sleep.icon=icons/toolbar/Sleep-48.png
-#wake_up.icon=icons/toolbar/WakeUp-48.png
-#sync_now.icon=icons/toolbar/Sync-48.png
-#sync_now_active.icon=icons/toolbar/SyncActive-48.png
-
-#sort_up.icon=icons/SortUp.gif
-#sort_down.icon=icons/SortDown.gif
-#sort_blank.icon=icons/SortBlank.gif
-
-#directory_new.icon=icons/Directory_new.gif
-
-# Sync icons for FolderQuickInfoPanel
-#sync_0.icon=icons/sync/Sync_0000.png
-#sync_1.icon=icons/sync/Sync_0001.png
-#sync_2.icon=icons/sync/Sync_0002.png
-#sync_3.icon=icons/sync/Sync_0003.png
-#sync_4.icon=icons/sync/Sync_0004.png
-#sync_5.icon=icons/sync/Sync_0005.png
-#sync_6.icon=icons/sync/Sync_0006.png
-#sync_7.icon=icons/sync/Sync_0007.png
-#sync_8.icon=icons/sync/Sync_0008.png
-#sync_9.icon=icons/sync/Sync_0009.png
-#sync_10.icon=icons/sync/Sync_0010.png
-#sync_11.icon=icons/sync/Sync_0011.png
-#sync_12.icon=icons/sync/Sync_0012.png
-#sync_13.icon=icons/sync/Sync_0013.png
-#sync_14.icon=icons/sync/Sync_0014.png
-#sync_15.icon=icons/sync/Sync_0015.png
-#sync_16.icon=icons/sync/Sync_0016.png
-#sync_17.icon=icons/sync/Sync_0017.png
-#sync_18.icon=icons/sync/Sync_0018.png
-#sync_19.icon=icons/sync/Sync_0019.png
-#sync_20.icon=icons/sync/Sync_0020.png
-#sync_21.icon=icons/sync/Sync_0021.png
-#sync_22.icon=icons/sync/Sync_0022.png
-#sync_23.icon=icons/sync/Sync_0023.png
-#sync_24.icon=icons/sync/Sync_0024.png
-#sync_25.icon=icons/sync/Sync_0025.png
-#sync_26.icon=icons/sync/Sync_0026.png
-#sync_27.icon=icons/sync/Sync_0027.png
-#sync_28.icon=icons/sync/Sync_0028.png
-#sync_29.icon=icons/sync/Sync_0029.png
-#sync_30.icon=icons/sync/Sync_0030.png
-#sync_31.icon=icons/sync/Sync_0031.png
-#sync_32.icon=icons/sync/Sync_0032.png
-#sync_33.icon=icons/sync/Sync_0033.png
-#sync_34.icon=icons/sync/Sync_0034.png
-#sync_35.icon=icons/sync/Sync_0035.png
-#sync_36.icon=icons/sync/Sync_0036.png
-#sync_37.icon=icons/sync/Sync_0037.png
-#sync_38.icon=icons/sync/Sync_0038.png
-#sync_39.icon=icons/sync/Sync_0039.png
-#sync_40.icon=icons/sync/Sync_0040.png
-#sync_41.icon=icons/sync/Sync_0041.png
-#sync_42.icon=icons/sync/Sync_0042.png
-#sync_43.icon=icons/sync/Sync_0043.png
-#sync_44.icon=icons/sync/Sync_0044.png
-#sync_45.icon=icons/sync/Sync_0045.png
-#sync_46.icon=icons/sync/Sync_0046.png
-#sync_47.icon=icons/sync/Sync_0047.png
-#sync_48.icon=icons/sync/Sync_0048.png
-#sync_49.icon=icons/sync/Sync_0049.png
-#sync_50.icon=icons/sync/Sync_0050.png
-#sync_51.icon=icons/sync/Sync_0051.png
-#sync_52.icon=icons/sync/Sync_0052.png
-#sync_53.icon=icons/sync/Sync_0053.png
-#sync_54.icon=icons/sync/Sync_0054.png
-#sync_55.icon=icons/sync/Sync_0055.png
-#sync_56.icon=icons/sync/Sync_0056.png
-#sync_57.icon=icons/sync/Sync_0057.png
-#sync_58.icon=icons/sync/Sync_0058.png
-#sync_59.icon=icons/sync/Sync_0059.png
-#sync_60.icon=icons/sync/Sync_0060.png
-#sync_61.icon=icons/sync/Sync_0061.png
-#sync_62.icon=icons/sync/Sync_0062.png
-#sync_63.icon=icons/sync/Sync_0063.png
-#sync_64.icon=icons/sync/Sync_0064.png
-#sync_65.icon=icons/sync/Sync_0065.png
-#sync_66.icon=icons/sync/Sync_0066.png
-#sync_67.icon=icons/sync/Sync_0067.png
-#sync_68.icon=icons/sync/Sync_0068.png
-#sync_69.icon=icons/sync/Sync_0069.png
-#sync_70.icon=icons/sync/Sync_0070.png
-#sync_71.icon=icons/sync/Sync_0071.png
-#sync_72.icon=icons/sync/Sync_0072.png
-#sync_73.icon=icons/sync/Sync_0073.png
-#sync_74.icon=icons/sync/Sync_0074.png
-#sync_75.icon=icons/sync/Sync_0075.png
-#sync_76.icon=icons/sync/Sync_0076.png
-#sync_77.icon=icons/sync/Sync_0077.png
-#sync_78.icon=icons/sync/Sync_0078.png
-#sync_79.icon=icons/sync/Sync_0079.png
-#sync_80.icon=icons/sync/Sync_0080.png
-#sync_81.icon=icons/sync/Sync_0081.png
-#sync_82.icon=icons/sync/Sync_0082.png
-#sync_83.icon=icons/sync/Sync_0083.png
-#sync_84.icon=icons/sync/Sync_0084.png
-#sync_85.icon=icons/sync/Sync_0085.png
-#sync_86.icon=icons/sync/Sync_0086.png
-#sync_87.icon=icons/sync/Sync_0087.png
-#sync_88.icon=icons/sync/Sync_0088.png
-#sync_89.icon=icons/sync/Sync_0089.png
-#sync_90.icon=icons/sync/Sync_0090.png
-#sync_91.icon=icons/sync/Sync_0091.png
-#sync_92.icon=icons/sync/Sync_0092.png
-#sync_93.icon=icons/sync/Sync_0093.png
-#sync_94.icon=icons/sync/Sync_0094.png
-#sync_95.icon=icons/sync/Sync_0095.png
-#sync_96.icon=icons/sync/Sync_0096.png
-#sync_97.icon=icons/sync/Sync_0097.png
-#sync_98.icon=icons/sync/Sync_0098.png
-#sync_99.icon=icons/sync/Sync_0099.png
-#sync_100.icon=icons/sync/Sync_0100.png
-#sync_unknown.icon=icons/sync/Sync_unknown.png
-
-# crappy button icons that don't make sense removed (for now)
-#preview_files.icon=
-#folder_join.icon=
-#empty_recycle_bin.icon=
-#restore_file.icon=
-#plugin_settings.icon=
-#plugin_enable.icon=
