--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -67,6 +67,10 @@ action_open_members_information.description=Open members information for this fo
 action_open_members_information.key=M
 action_open_members_information.name=Members
 
+action_reconnect.description=Reconnects to this computer now
+action_reconnect.key=R
+action_reconnect.name=Reconnect
+
 ###################
 # Everything Else #
 ###################
@@ -1140,10 +1144,6 @@ quickinfo.webservice.not_available=Online Storage not available in LAN only mode
 quickinfo.webservice.not_connected=Disconnected from PowerFolder Online Storage
 quickinfo.webservice.not_setup=Online Storage not configured yet
 quickinfo.webservice.title=PowerFolder Online Storage
-
-reconnect.description=Reconnects to this user now
-reconnect.key=r
-reconnect.name=Reconnect
 
 recyclebin.confirmation.overwrite.on.restore.changed.date=Changed {0}
 recyclebin.confirmation.overwrite.on.restore.overwrite.filename=Overwrite {0}?
