#278 - computers show true friend status

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -25,7 +25,11 @@
 
 action_add_friend.description=Adds computer to friend list
 action_add_friend.key=F
-action_add_friend.name=Add To Friends
+action_add_friend.name=Add to Friends
+
+action_remove_friend.description=Removes computer from friend list
+action_remove_friend.key=R
+action_remove_friend.name=Remove from Friends
 
 action_connect.description=Manually connects to a PowerFolder computer
 action_connect.key=C
@@ -49,7 +53,7 @@ action_find_computers.name=Find Computers
 
 action_hide_offline.description=Offline computers will be filtered from this search result
 action_hide_offline.key=H
-action_hide_offline.name=Hide offline computers
+action_hide_offline.name=Hide Offline computers
 
 action_search_computer.description=Search for a computer
 action_search_computer.key=S
@@ -321,7 +325,7 @@ empty_recycle_bin_confimation.dont=Do Not Empty
 empty_recycle_bin_confimation.empty=Empty
 empty_recycle_bin_confimation.text=PowerFolder Recycle Bin will be emptied.
 empty_recycle_bin_confimation.title=Empty PowerFolder Recycle Bin
-
+                                           a
 enable_silent_mode.description=Disables all heavy tasks, e.g. scanning for changes in folders, thus no disk activity
 enable_silent_mode.key=s
 enable_silent_mode.name=Run Silently
