--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -6,6 +6,7 @@ action_open_preferences.icon=icons/Preferences.png
 action_open_about_box.icon=icons/information.png
 action_connect.icon=icons/ConnectBright.png
 action_add_friend.icon=icons/Plus.png
+action_remove_friend.icon=icons/Minus.png
 action_open_settings_information.icon=icons/Settings.png
 action_open_files_information.icon=icons/Folders.png
 action_open_members_information.icon=icons/Node_Friend_Connected.gif
