#278 - messages for add action

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -53,7 +53,7 @@ action_find_computers.name=Find Computers
 
 action_hide_offline.description=Offline computers will be filtered from this search result
 action_hide_offline.key=H
-action_hide_offline.name=Hide Offline computers
+action_hide_offline.name=Hide offline computers
 
 action_search_computer.description=Search for a computer
 action_search_computer.key=S
