--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -39,6 +39,10 @@ action_open_about_box.description=Shows information about PowerFolder
 action_open_about_box.key=A
 action_open_about_box.name=About
 
+action_open_chat.description=Opens a chat session with this computer
+action_open_chat.key=C
+action_open_chat.name=Chat
+
 action_open_preferences.key=P
 action_open_preferences.name=Preferences
 action_open_preferences.description=Opens the preferences dialog
@@ -154,6 +158,8 @@ buy_pro.name=Buy Pro
 
 change.friend.personal.message.text=You may include a personal message for {0}
 change.friend.personal.message.title=Add friend message
+
+chat_frame.title=Chat
 
 chat.notification.member_message=You have received a chat message from {0}.
 chat.notification.message=You have received a chat message.
