--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -3,6 +3,7 @@
 action_new_folder.icon=icons/Plus.png
 action_find_computers.icon=icons/FindComputers.gif
 action_open_preferences.icon=icons/Preferences.png
+action_open_chat.icon=icons/Chat.gif
 action_open_about_box.icon=icons/information.png
 action_connect.icon=icons/ConnectBright.png
 action_add_friend.icon=icons/Plus.png
