#278 - folder info tab initial

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -726,9 +726,12 @@ image_file_info.unknown=Unknown
 
 info_side.title=Information
 
-information.files.title={0} files
-information.members.title={0} members
-information.settings.title={0} settings
+folder_information_card.files.title=Files
+folder_information_card.files.tips=Shows file details for this folder
+folder_information_card.members.title=Members
+folder_information_card.members.tips=Shows folder member details
+folder_information_card.settings.title=Settings
+folder_information_card.settings.tips=Shows settings for this folder
 
 invitation.utils.unable.write.text=Error while writing invitation, please try again.
 invitation.utils.unable.write.title=Unable to write invitation
