--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -579,6 +579,8 @@ folder_panel.settings_tab.userecyclebin=Use recycle bin
 folder_panel.settings_tab.white_list.message=Only files matching whitelist patterns will be synchronized.
 folder_panel.settings_tab.white_list.title=Whitelist
 
+folder_information_settings_tab.transfer_mode=Transfer mode
+
 folder_repository.continue_previewing=Continue Previewing
 folder_repository.join_folder=Join Folder
 folder_repository.leave_folder=Leave Folder
