#278 - Settings use recycle bin

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -580,6 +580,7 @@ folder_panel.settings_tab.white_list.message=Only files matching whitelist patte
 folder_panel.settings_tab.white_list.title=Whitelist
 
 folder_information_settings_tab.transfer_mode=Transfer mode
+folder_information_settings_tab.use_recycle_bin=Use recycle bin
 
 folder_repository.continue_previewing=Continue Previewing
 folder_repository.join_folder=Join Folder
