--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -12,4 +12,7 @@ action_open_settings_information.icon=icons/Settings.png
 action_open_files_information.icon=icons/Folders.png
 action_open_members_information.icon=icons/Node_Friend_Connected.gif
 action_reconnect.icon=icons/ConnectBright.png
+action_add_ignore.icon=icons/Plus.png
+action_edit_ignore.icon=icons/Edit.png
+action_remove_ignore.icon=icons/Minus.png
 
