--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -27,6 +27,18 @@ action_add_friend.description=Adds computer to friend list
 action_add_friend.key=F
 action_add_friend.name=Add to Friends
 
+action_add_ignore.description=Add a pattern to the ignore list
+action_add_ignore.key=A
+action_add_ignore.name=Add
+
+action_edit_ignore.description=Edit a pattern in the ignore list
+action_edit_ignore.key=E
+action_edit_ignore.name=Edit
+
+action_remove_ignore.description=Remove a pattern from the ignore list
+action_remove_ignore.key=R
+action_remove_ignore.name=Remove
+
 action_remove_friend.description=Removes computer from friend list
 action_remove_friend.key=R
 action_remove_friend.name=Remove from Friends
@@ -576,11 +588,19 @@ folder_panel.settings_tab.removebutton.key=R
 folder_panel.settings_tab.removebutton.name=Remove
 folder_panel.settings_tab.title=Settings
 folder_panel.settings_tab.userecyclebin=Use recycle bin
-folder_panel.settings_tab.white_list.message=Only files matching whitelist patterns will be synchronized.
+folder_panel.settings_tab.white_list.message=Oaction_add_ignorenly files matching whitelist patterns will be synchronized.
 folder_panel.settings_tab.white_list.title=Whitelist
 
 folder_information_settings_tab.transfer_mode=Transfer mode
 folder_information_settings_tab.use_recycle_bin=Use recycle bin
+folder_information_settings_tab.ignore_patterns=Ignore patterns
+folder_information_settings_tab.add_a_pattern.example=example/*.jpg
+folder_information_settings_tab.add_a_pattern.text=Enter a pattern to exclude files from synchronization
+folder_information_settings_tab.add_a_pattern.title=Add ignore pattern
+folder_information_settings_tab.edit_a_pattern.text=Edit a pattern to exclude files from synchronization
+folder_information_settings_tab.edit_a_pattern.title=Edit a pattern
+folder_information_settings_tab.add_patterns.text_1=The following ignore patterns will be added
+folder_information_settings_tab.add_patterns.title=Add ignore patterns
 
 folder_repository.continue_previewing=Continue Previewing
 folder_repository.join_folder=Join Folder
