#278 - icons / action congig for sync profile selector

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -15,4 +15,7 @@ action_reconnect.icon=icons/ConnectBright.png
 action_add_ignore.icon=icons/Plus.png
 action_edit_ignore.icon=icons/Edit.png
 action_remove_ignore.icon=icons/Minus.png
+action_edit_transfer_mode.icon=icons/Edit.png
+action_delete_transfer_mode.icon=icons/Minus.png
+action_create_transfer_mode.icon=icons/Plus.png
 
