--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -23,6 +23,18 @@
 # Actions #
 ###########
 
+action_edit_transfer_mode.description=Edit this transfer mode
+action_edit_transfer_mode.key=E
+action_edit_transfer_mode.name=Edit
+
+action_delete_transfer_mode.description=Delete this transfer mode
+action_delete_transfer_mode.key=D
+action_delete_transfer_mode.name=Delete
+
+action_create_transfer_mode.description=Create a custom transfer mode
+action_create_transfer_mode.key=C
+action_create_transfer_mode.name=Create
+
 action_add_friend.description=Adds computer to friend list
 action_add_friend.key=F
 action_add_friend.name=Add to Friends
@@ -254,17 +266,8 @@ dialog.create_edit_profile.cannot_save_name=This transfer mode cannot be saved b
 dialog.create_edit_profile.cannot_save_profile=This transfer mode cannot be saved because\nit is identical to transfer mode {0}
 dialog.create_edit_profile.change_detection_disabled=Change detection disabled
 dialog.create_edit_profile.configure_from=Configure from an existing transfer mode
-dialog.create_edit_profile.create_button.description=Create a custom transfer mode
-dialog.create_edit_profile.create_button.key=C
-dialog.create_edit_profile.create_button.name=Create
 dialog.create_edit_profile.daily_sync=Daily synchronization
-dialog.create_edit_profile.delete_button.description=Delete this transfer mode
-dialog.create_edit_profile.delete_button.key=D
-dialog.create_edit_profile.delete_button.name=Delete
 dialog.create_edit_profile.duplicate_profile_title=Duplicate transfer mode
-dialog.create_edit_profile.edit_button.description=Edit this transfer mode
-dialog.create_edit_profile.edit_button.key=E
-dialog.create_edit_profile.edit_button.name=Edit
 dialog.create_edit_profile.every_day=Every day
 dialog.create_edit_profile.hour_day_sync=Hour / day of synchronization
 dialog.create_edit_profile.profile_name=Mode name
