#278 - add file location stuff to folder info settings tab

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -604,6 +604,21 @@ folder_information_settings_tab.edit_a_pattern.text=Edit a pattern to exclude fi
 folder_information_settings_tab.edit_a_pattern.title=Edit a pattern
 folder_information_settings_tab.add_patterns.text_1=The following ignore patterns will be added
 folder_information_settings_tab.add_patterns.title=Add ignore patterns
+folder_information_settings_tab.local_folder_location=Local folder location
+folder_information_settings_tab.select_directory.text=Select folder location
+folder_information_settings_tab.move_content.title=Move folder contents
+folder_information_settings_tab.move_content=Also move current folder contents?
+folder_information_settings_tab.move_content.move=Move Contents
+folder_information_settings_tab.move_content.dont=Do Not Move Contents
+folder_information_settings_tab.move_error.title=Error moving folder contents
+folder_information_settings_tab.move_error.temp=Could not create temporary folder
+folder_information_settings_tab.move_error.other=There was an error moving the folder\:\n{0}
+folder_information_settings_tab.confirm_local_folder_move.title=Confirm move
+folder_information_settings_tab.confirm_local_folder_move.text=Local folder will be moved from\n{0}\nto\n{1}.
+folder_information_settings_tab.folder_not_empty=Folder {0} is not empty.
+folder_information_settings_tab.folder_not_empty.title=Folder not empty.
+folder_information_settings_tab.working.title=Moving folder
+folder_information_settings_tab.working.description=The folder is being moved
 
 folder_repository.continue_previewing=Continue Previewing
 folder_repository.join_folder=Join Folder
