#278 - more members information tab

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -767,6 +767,12 @@ image_file_info.unknown=Unknown
 
 info_side.title=Information
 
+folder_member_table_model.icon=
+folder_member_table_model.name=Name
+folder_member_table_model.sync_status=Sync status
+folder_member_table_model.folder_size=Folder size
+folder_member_table_model.local_size=Local size
+
 folder_information_card.files.title=Files
 folder_information_card.files.tips=Shows file details for this folder
 folder_information_card.members.title=Members
