#278 - beginings of files tab

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -18,4 +18,6 @@ action_remove_ignore.icon=icons/Minus.png
 action_edit_transfer_mode.icon=icons/Edit.png
 action_delete_transfer_mode.icon=icons/Minus.png
 action_create_transfer_mode.icon=icons/Plus.png
+action_details.icon=icons/Details.gif
+
 
