--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -39,6 +39,10 @@ action_add_friend.description=Adds computer to friend list
 action_add_friend.key=F
 action_add_friend.name=Add to Friends
 
+action_details.description=Displays the details panel
+action_details.key=D
+action_details.name=Details
+
 action_add_ignore.description=Add a pattern to the ignore list
 action_add_ignore.key=A
 action_add_ignore.name=Add
