--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -455,6 +455,14 @@ files_tab.deleted=Deleted\: {0}
 files_tab.incoming=Incoming\: {0}
 files_tab.local=Local\: {0}
 files_tab.recycled=Recycled\: {0}
+files_tab.combo.deleted_and_previous_files=Deleted and recycled files
+files_tab.combo.incoming_files_only=Incoming files only
+files_tab.combo.local_and_incoming=Local and incoming files
+files_tab.combo.local_files_only=Local files only
+files_tab.combo.new_files_only=New files only
+files_tab.combo.combo.tooltip=Select files to display
+files_tab.filter_by_file_name.hint=Filter by file name
+files_tab.filter_by_file_name.tool_tip=Filter results by file name
 
 files_tab.recursive_selection.tooltip=Flatten view of folder directory structure
 
