--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -19,6 +19,10 @@
 # http://www.powerfolder.com
 #
 
+preferences.dialog.server=Online Storage Server
+preferences.dialog.networkmode.serveronly=Server only
+preferences.dialog.networkmode.serveronly.tooltip=Restricts connections to the server only. This actually disables any peer-to-peer traffic and keeps the connection to the set Online Storage server only.
+
 ###########
 # Actions #
 ###########
